[project]
name = "project5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taha", email = "muntahahussainsample@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.44.1",
]

[project.scripts]
project5 = "project5:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
